tests/transpiler/x/scala/substring_builtin.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 13:30:54 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        println(substring("mochi", 1, 4))
    }
}
